// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > style variants > block 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-normal rounded-sm gap-x-1.5 px-2.5 py-2.5 inline-flex items-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border-b-2 w-full justify-center text-sm text-white bg-blue-500 hover:bg-blue-600 disabled:bg-blue-500 focus-visible:outline-blue-500 border-b-blue-800"
      >
        text
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-normal rounded-sm gap-x-1.5 px-2.5 py-2.5 inline-flex items-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border-b-2 w-full justify-center text-sm text-white bg-blue-500 hover:bg-blue-600 disabled:bg-blue-500 focus-visible:outline-blue-500 border-b-blue-800"
    >
      text
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button > style variants > color 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-normal rounded-sm gap-x-1.5 px-2.5 py-2.5 inline-flex items-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border-b-2 text-sm text-white bg-blue-500 hover:bg-blue-600 disabled:bg-blue-500 focus-visible:outline-blue-500 border-b-blue-800"
      >
        text
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-normal rounded-sm gap-x-1.5 px-2.5 py-2.5 inline-flex items-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border-b-2 text-sm text-white bg-blue-500 hover:bg-blue-600 disabled:bg-blue-500 focus-visible:outline-blue-500 border-b-blue-800"
    >
      text
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button > style variants > color 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-normal rounded-sm gap-x-1.5 px-2.5 py-2.5 inline-flex items-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border-b-2 text-sm text-white bg-blue-500 hover:bg-blue-600 disabled:bg-blue-500 focus-visible:outline-blue-500 border-b-blue-800"
      >
        text
      </button>
    </div>
    <div>
      <button
        class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-normal rounded-sm gap-x-1.5 px-2.5 py-2.5 inline-flex items-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border-b-2 text-sm text-white bg-gray-600 hover:bg-gray-700 disabled:bg-gray-600 focus-visible:outline-gray-600 border-b-gray-800"
      >
        text
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-normal rounded-sm gap-x-1.5 px-2.5 py-2.5 inline-flex items-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border-b-2 text-sm text-white bg-gray-600 hover:bg-gray-700 disabled:bg-gray-600 focus-visible:outline-gray-600 border-b-gray-800"
    >
      text
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button > style variants > happy path 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-normal rounded-sm gap-x-1.5 px-2.5 py-2.5 inline-flex items-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border-b-2 text-sm text-white bg-blue-500 hover:bg-blue-600 disabled:bg-blue-500 focus-visible:outline-blue-500 border-b-blue-800"
      >
        text
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-normal rounded-sm gap-x-1.5 px-2.5 py-2.5 inline-flex items-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border-b-2 text-sm text-white bg-blue-500 hover:bg-blue-600 disabled:bg-blue-500 focus-visible:outline-blue-500 border-b-blue-800"
    >
      text
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button > style variants > size 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-normal rounded-sm gap-x-1.5 px-2.5 py-2.5 inline-flex items-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border-b-2 text-sm text-white bg-blue-500 hover:bg-blue-600 disabled:bg-blue-500 focus-visible:outline-blue-500 border-b-blue-800"
      >
        text
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-normal rounded-sm gap-x-1.5 px-2.5 py-2.5 inline-flex items-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border-b-2 text-sm text-white bg-blue-500 hover:bg-blue-600 disabled:bg-blue-500 focus-visible:outline-blue-500 border-b-blue-800"
    >
      text
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button > style variants > size 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-normal rounded-sm gap-x-1.5 px-2.5 py-2.5 inline-flex items-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border-b-2 text-sm text-white bg-blue-500 hover:bg-blue-600 disabled:bg-blue-500 focus-visible:outline-blue-500 border-b-blue-800"
      >
        text
      </button>
    </div>
    <div>
      <button
        class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-normal rounded-sm gap-x-1.5 px-2.5 py-2.5 inline-flex items-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border-b-2 text-lg text-white bg-blue-500 hover:bg-blue-600 disabled:bg-blue-500 focus-visible:outline-blue-500 border-b-blue-800"
      >
        text
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-normal rounded-sm gap-x-1.5 px-2.5 py-2.5 inline-flex items-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 border-b-2 text-lg text-white bg-blue-500 hover:bg-blue-600 disabled:bg-blue-500 focus-visible:outline-blue-500 border-b-blue-800"
    >
      text
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
